<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdy"
    tools:context=".WeightAndMesearmunt.WeightMeas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:fontFamily="serif-monospace"
            android:text="@string/weight_and_body_measurements"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_View"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Date_View"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etWaist"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/waist"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etChest"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:hint="Chest"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etShoulder"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:ems="10"
            android:hint="Shoulder"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etArm"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:ems="10"
            android:hint="Arm"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etThigh"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="Thigh"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCalf"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:ems="10"
            android:hint="Calf"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etHip"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:ems="10"
            android:hint="Hip"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:hint="@string/height_ex_135cm"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/upload_body_photo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnWeightSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="Submit"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etHeight2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnWeightSubmit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="View Data"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>